// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createBearerRefreshHandler > capturedJkt (DPoP binding) > accepts refresh when new token has same cnf.jkt 1`] = `
{
  "claims": {
    "audience": [
      "https://api.test.lindorm.io",
    ],
    "confirmation": {
      "thumbprint": "jkt-abc",
    },
    "expiresAt": 2026-04-11T13:00:00.000Z,
    "issuer": "https://test.lindorm.io/",
    "subject": "alice",
  },
  "custom": {},
  "format": "jwt",
  "header": {
    "tokenType": "access_token",
  },
  "token": "eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiJhbGljZSJ9.signature",
}
`;

exports[`createBearerRefreshHandler > swaps bearer, updates getExpiresAt from expiresIn, clears authExpiredEmittedAt on valid refresh 1`] = `
{
  "claims": {
    "audience": [
      "https://api.test.lindorm.io",
    ],
    "expiresAt": 2026-04-11T13:30:00.000Z,
    "issuer": "https://test.lindorm.io/",
    "subject": "alice",
  },
  "custom": {},
  "format": "jwt",
  "header": {
    "tokenType": "access_token",
  },
  "token": "eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiJhbGljZSJ9.signature",
}
`;
